2007-10-29 Francis Lachapelle <francis@Sophos.ca>

	* Improved parsing for check_sender_access maps.

2007-10-15 Francis Lachapelle <francis@Sophos.ca>

	* Added calls to finish on statement handles for 
	scripts/sessions_maintenance_sql.pl.
	
2007-08-07 Francis Lachapelle <francis@Sophos.ca>

	* Improved error handling of scripts/sessions_maintenance_sql.pl.

2007-08-02 Francis Lachapelle <francis@Sophos.ca>

	* Improved database statement handler validation in
	  sbin/spamityd.

2007-07-13 Francis Lachapelle <francis@Sophos.ca>

	* Improved plugins/munin/spamity for better database
	  portability.

2007-07-12 Francis Lachapelle <francis@Sophos.ca>

	* Added support for CGI::Session::Oracle.
	* Fixed SQL query in function getPeriodByDay in 
	  lib/Spamity/Database/oracle.pm.
	* Renamed scripts/multiple_tables.pl to 
	  scripts/create_tables.pl.
	* Tagged CVS branch to v0.9.6.
	
2007-07-10 Francis Lachapelle <francis@Sophos.ca>

	* Added support for custom port number for Oracle databases.

2007-07-06 Francis Lachapelle <francis@Sophos.ca>

	* Removed references to the 'date' binary in sbin/spamityd in
	  order to improve portability.
	* Changed sbin/spamityd to ignore non-fatal 4xx SMTP errors -
	  normally greylisted connections (thanks Eddy!).
	* Added verification of database definition in 
	  lib/Spamity/Database.pm.
	* Added the possibility to define white/black list without
	  specifying an amavisd policy (actually, the policy has id 0).
	* Improved french translation.
	* Improved URL and language handling in CGI scripts.
	
2007-07-05 Francis Lachapelle <francis@Sophos.ca>
	
	* Added support to define environment variables in
	  configuration file.
	* Added lib/Spamity/Database/oracle.pm.
	* Added function postNew to lib/Spamity/Database.pm to allow
	  drivers to execute a statement once the connection to the
	  database is established.
	* Added functions getOctetLength, formatFromSubquery, and 
	  formatLimitWithOffset to lib/Spamity/Database.pm for more 